# eos-kolibri

./: .editorconfig  .gitignore  README.md  meson.build  meson_options.txt
data/: 00-eos-kolibri.conf.in  Makefile.am  eos-kolibri-system-helper.service.in  meson.build
data/dbus/: meson.build  org.learningequality.Kolibri.Daemon.conf.in  org.learningequality.Kolibri.Daemon.service.in
data/environment.d/: 00-endless-key.conf.in  00-eos-kolibri.conf.in  meson.build
data/system/: eos-kolibri-system-helper.service.in  eos-kolibri-system-helper.socket.in  meson.build
data/systemd/: dbus-org.learningequality.Kolibri.Daemon.service.in  meson.build
data/sysusers.d/: eos-kolibri.conf.in  kolibri.conf.in  meson.build
data/tmpfiles.d/: eos-kolibri-system-helper.conf.in  eos-kolibri.conf.in  meson.build
data/user-environment-generators/: 61-eos-kolibri.sh.in  meson.build
debian/: control  postinst
src/: endless-key-listcontent.in  eos-kolibri-backup.in  eos-kolibri-daemon.in  eos-kolibri-export  eos-kolibri-import  eos-kolibri-listcontent.in  eos-kolibri-listcontent.py  eos-kolibri-manage.in  eos-kolibri-migrate.in  meson.build
src/eos_kolibri/: config.py.in  utils.py
src/eos_kolibri/eos_kolibri_migrate/: main.py
src/eos_kolibri_tools/: config.py.in  eos_kolibri_backup.py  eos_kolibri_migrate.py  flatpakutils.py  meson.build  utils.py
src/system_helper/: eos-kolibri-session-helper-main.c  eos-kolibri-session-helper.c  eos-kolibri-session-helper.h  eos-kolibri-share-directory-context.c  eos-kolibri-share-directory-context.h  eos-kolibri-system-helper-main.c  eos-kolibri-system-helper.c  eos-kolibri-system-helper.h  meson.build  org.endlessos.Kolibri.xml
src/tools/: config.py.in  meson.build
src/tools/eos_kolibri_migrate/: main.py
tests/: meson.build
tests/test_eos_kolibri/: test_eos_kolibri_migrate.py
