option(
    'systemd_system_unit_dir',
    type: 'string',
    value: '',
    description: 'systemd system services directory [default=$libdir/systemd/system]'
)

option(
    'systemd_sysusers_dir',
    type: 'string',
    value: '',
    description: 'tmpfiles directory [default=$libdir/sysusers.d]'
)

option(
    'systemd_tmpfiles_dir',
    type: 'string',
    value: '',
    description: 'tmpfiles directory [default=$libdir/tmpfiles.d]'
)

option(
    'systemd_environment_dir',
    type: 'string',
    value: '',
    description: 'tmpfiles directory [default=$libdir/environment.d]'
)

option(
    'systemd_user_environment_generators_dir',
    type: 'string',
    value: '',
    description: 'systemd user environment generators directory [default=$libdir/systemd/system/user-environment-generators]'
)

option(
    'kolibri_user',
    type: 'string',
    value: 'kolibri',
    description: 'user to create for the system service'
)

option(
    'kolibri_user_home',
    type: 'string',
    value: '',
    description: 'home directory for the system user [default=$localstatedir/lib/kolibri]'
)

option(
    'endlesskey_user_home',
    type: 'string',
    value: '',
    description: 'home directory for the Endless Key system user [default=$localstatedir/lib/endless-key]'
)

option(
    'kolibri_flatpak_id',
    type: 'string',
    value: 'org.learningequality.Kolibri',
    description: 'identifier for the Kolibri flatpak [default=org.learningequality.Kolibri]'
)

option(
    'endlesskey_flatpak_id',
    type: 'string',
    value: 'org.endlessos.Key',
    description: 'identifier for the Endless Key flatpak [default=org.endlessos.Key]'
)
