configure_file(
    input: 'eos-kolibri.conf.in',
    output: 'eos-kolibri.conf',
    configuration: eos_kolibri_config,
    install_dir: systemd_tmpfiles_dir
)

configure_file(
    input: 'eos-kolibri.conf.in',
    output: 'endless-key.conf',
    configuration: endless_key_config,
    install_dir: systemd_tmpfiles_dir
)
