configure_file(
    input: '61-eos-kolibri.sh.in',
    output: '61-eos-kolibri.sh',
    configuration: eos_kolibri_config,
    install_dir: systemd_user_environment_generators_dir,
    install_mode: 'rwxr-xr-x'
)

configure_file(
    input: '61-eos-kolibri.sh.in',
    output: '61-endless-key.sh',
    configuration: endless_key_config,
    install_dir: systemd_user_environment_generators_dir,
    install_mode: 'rwxr-xr-x'
)
